--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc -b && node dist/index.js"
+    "dev": "npx tsc -b && node dist/index.js",
+    "build": "npx tsc -b"
   },
   "dependencies": {
+    "@repo/common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.13",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.0"
   },
   "keywords": [],
