--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@repo/common": "workspace:*",
+    "@repo/backend-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.13",
