--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/node": "^22.10.5",
+    "dotenv": "^16.4.7",
     "typescript": "^5.7.3"
   },
   "keywords": [],
