--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.0.3",
     "axios": "^1.7.9",
@@ -18,6 +19,7 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
