--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.0.3",
     "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
